Added few validation annotations.

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,5 @@
 javax.validation.constraints.NotNull.message=This value cannot be null
 javax.validation.constraints.NotBlank.message=This field cannot be empty
 javax.validation.constraints.Size.message=This value is longer than {max}
+javax.validation.constraints.Future.message=This value must be in the future
+org.hibernate.validator.constraints.Range.message=This value must be between {min} and {max}
